--- a/assets/scss/assets/_variables.scss
+++ b/assets/scss/assets/_variables.scss
@@ -11,4 +11,9 @@ $color-green: #3E9E6C;
 $color-white: #fff;
 $color-grey: #EAEAEA;
 $color-grey-dark: #4E4E4E;
-$color-grey-light: #F6F6F6
+$color-grey-light: #F6F6F6;
+$color-base: #636363;
+
+$yellow-light: #FFFAF2;
+$yellow-dark: #F0D8B3;
+$yellow: #FFF3E0;
