feat: register section

--- a/assets/scss/assets/_variables.scss
+++ b/assets/scss/assets/_variables.scss
@@ -11,4 +11,5 @@ $color-green: #3E9E6C;
 $color-white: #fff;
 $color-grey: #EAEAEA;
 $color-grey-dark: #4E4E4E;
-$color-grey-light: #F6F6F6
+$color-grey-light: #F6F6F6;
+$color-yellow-light: #FFFAF2
