--- a/assets/scss/global.scss
+++ b/assets/scss/global.scss
@@ -106,6 +106,7 @@ header {
 
     .nav-bottom {
         height: 75px;
+        background: $color-white;
         border-bottom: 1px solid $color-grey;
 
         .hamburger-menu {
