--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -42,3 +42,42 @@ section {
 		padding-bottom: var(--space);
 	}
 }
+
+// Rating
+.star-rating {
+	direction: rtl;
+	display: inline-block;
+	padding: 20px;
+	cursor: default;
+
+	input[type="radio"] {
+		display: none;
+	}
+
+	label {
+		color: $color-green;
+		font-size: 18px;
+		padding: 0;
+		cursor: pointer;
+		-webkit-transition: all 0.3s ease-in-out;
+		transition: all 0.3s ease-in-out;
+		.bi-star-fill {
+			position: absolute;
+			opacity: 0;
+			-webkit-transition: all 0.3s ease-in-out;
+			transition: all 0.3s ease-in-out;
+			&.active {
+				opacity: 1;
+			}
+		}
+	}
+
+	label:hover,
+	label:hover ~ label,
+	input[type="radio"]:checked ~ label {
+		color: $color-green;
+		.bi-star-fill {
+			opacity: 1;
+		}
+	}
+}
