--- a/assets/scss/assets/_variables.scss
+++ b/assets/scss/assets/_variables.scss
@@ -9,6 +9,7 @@ $color-green-light: #3FDD6E;
 $color-green-dark: #00423E;
 $color-green: #3E9E6C;
 $color-white: #fff;
+$color-black:#000000;
 $color-grey: #EAEAEA;
 $color-grey-dark: #4E4E4E;
 $color-grey-light: #F6F6F6;
