--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -44,6 +44,21 @@ section {
 		}
 	}
 
+	.btn{
+		font-size: 13px!important;
+	}
+
+	.btn-outline {
+		border: 2px solid $color-white;
+		&:hover{
+			background-color: $color-white;
+			color: $color-green!important;
+		}
+	}
+	.badge-primary {
+		border: 2px solid #d0d0d0;
+	}
+
 	&.section-intro {
 		background-color: $yellow-light;
 		padding-top: var(--space);
@@ -72,36 +87,226 @@ section {
 			}
 		}
 		.swiper {
-			width: 600px;
-			height: 300px;
-		}
-		.card {
-			background-color: $color-green-dark;
-			color: $color-white;
-			border: none;
-			text-align: left;
-			.icon-leaf {
-				padding: 20px 20px 0 0;
-				display: flex;
-				justify-content: flex-end;
-				position: absolute;
-				width: 100%;
-				right: 0;
-			}
-			&-body {
-				padding: 1.5rem 2.5rem 2.5rem;
-			}
-			&-title {
-				min-height: 60px;
-				display: flex;
-				align-items: flex-end;
+			width: calc(100% - 5px);
+			min-height: 500px;
+			height: 100%;
+			border-radius: 1rem;
+			overflow: hidden;
+			margin-right: 0;
+			&-wrapper,
+			&-slide {
+				height: 100%;
+				position: relative;
 			}
 			&-img {
-				border: none;
+				position: absolute;
+				left: 0;
+				top: 0;
+				width: 100%;
+				height: 100%;
+				img {
+					object-fit: cover;
+					object-position: center;
+					width: 100%;
+					height: 100%;
+				}
 			}
-			.btn-primary {
-				margin-top: 2rem;
-				font-family: $font-Basier-medium;
+			&-button-prev,
+			&-button-next {
+				background-color: $color-green-dark;
+				width: 50px;
+				height: 50px;
+				border-radius: 0.25rem;
+				top: auto;
+				bottom: 30px;
+				left: auto;
+				transition: all 0.15s ease-in-out;
+				&:hover {
+					background-color: $color-green;
+				}
+				&:after {
+					content: "";
+					width: 0;
+					height: 0;
+					position: absolute;
+					top: 40%;
+					left: 40%;
+				}
+			}
+			&-button-prev {
+				right: 410px;
+				&:after {
+					content: "";
+					border-style: solid;
+					border-width: 5px 10px 5px 0;
+					border-color: transparent $color-green-light transparent
+						transparent;
+				}
+			}
+			&-button-next {
+				right: 350px;
+				&::after {
+					content: "";
+					border-style: solid;
+					border-width: 5px 0 5px 10px;
+					border-color: transparent transparent transparent
+						$color-green-light;
+				}
+			}
+		}
+
+		.section-slide-1 {
+			.card {
+				background-color: $color-green-dark;
+				color: $color-white;
+				border: none;
+				text-align: left;
+				border-radius: 1rem;
+				overflow: hidden;
+				position: relative;
+				z-index: 2;
+				.icon-leaf {
+					padding: 20px 20px 0 0;
+					display: flex;
+					justify-content: flex-end;
+					position: absolute;
+					width: 100%;
+					right: 0;
+				}
+				&-body {
+					padding: 1.5rem 2.5rem 2.5rem;
+				}
+				&-title {
+					min-height: 60px;
+					display: flex;
+					align-items: flex-end;
+					margin-bottom: 1rem;
+				}
+				&-img {
+					border: none;
+				}
+				.btn-primary {
+					margin-top: 2rem;
+					font-family: $font-Basier-medium;
+				}
+			}
+			.swiper {
+				&-content {
+					z-index: 1;
+					max-width: 320px;
+					text-align: left;
+					padding: 30px;
+					background: rgba(255, 255, 255, 0.48);
+					height: 100%;
+					display: flex;
+					flex-direction: column;
+					justify-content: space-between;
+					margin-left: auto;
+					position: relative;
+					.recommend {
+						background-color: $color-green-dark;
+						color: $color-white;
+						padding: 12px 15px;
+						border-radius: 10px;
+						max-width: 150px;
+						display: flex;
+						justify-content: space-between;
+						margin-bottom: 0.5rem;
+					}
+					.product-details {
+						&-percent,
+						&-tags {
+							color: $color-black;
+						}
+						&-percent {
+							margin-bottom: 1.5rem;
+							ul {
+								list-style: none;
+								padding: 0;
+								margin: 0;
+								max-width: 180px;
+								grid-template-columns: 1fr 1fr;
+								white-space: nowrap;
+								img {
+									margin-right: 0.25rem;
+								}
+								li + li {
+									margin-left: 0.5rem;
+								}
+							}
+						}
+						&-tags {
+							.btn {
+								padding: 15px;
+							}
+							img {
+								margin-right: 0.25rem;
+							}
+							span + span {
+								margin-left: 0.5rem;
+							}
+						}
+					}
+					.btn-learn-more {
+						width: 100%;
+						max-width: 400px;
+						margin: 2rem auto 0;
+						padding: 15px;
+						font-family: $font-Basier-medium;
+					}
+				}
+			}
+		}
+
+		.section-slide-2 {
+			margin-top: 5px;
+			.card {
+				background-color: $color-green;
+				color: $color-white;
+				border: none;
+				text-align: left;
+				border-radius: 1rem;
+				overflow: hidden;
+				position: relative;
+				z-index: 2;
+				height: 100%;
+				color: $color-white;
+				&-body {
+					padding: 2.5rem;
+					display: flex;
+					flex-direction: column;
+					justify-content: center;
+				}
+				&-title {
+					color: $color-white;
+					margin-bottom: 0;
+				}
+				&-text {
+					margin: 1.5rem 0;
+				}
+				.btn {
+					width: 100%;
+					max-width: 200px;
+					padding: 15px;
+					font-family: $font-Basier-medium;
+					border-radius: 60px;
+					color: $color-white;
+					text-transform: uppercase;
+				}
+			}
+			.swiper {
+				height: 350px;
+				min-height: auto;
+				&-content {
+					height: 100%;
+					margin-left: auto;
+				}
+				&-button-next{
+					right: calc(33.33333333% + 30px);
+				}
+				&-button-prev{
+					right: calc(33.33333333% + 90px);
+				}
 			}
 		}
 	}
@@ -135,40 +340,49 @@ section {
 }
 
 // Rating
-.star-rating {
-	direction: rtl;
-	display: inline-block;
-	padding: 20px;
-	cursor: default;
+.card-rating {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	border-top: 1px solid #d0d0d0;
+	border-bottom: 1px solid #d0d0d0;
+	padding: 1rem 0;
+	margin: 1.5rem 0;
+	color: $color-green;
+	.star-rating {
+		direction: rtl;
+		display: inline-block;
+		cursor: default;
 
-	input[type="radio"] {
-		display: none;
-	}
+		input[type="radio"] {
+			display: none;
+		}
 
-	label {
-		color: $color-green;
-		font-size: 18px;
-		padding: 0;
-		cursor: pointer;
-		-webkit-transition: all 0.3s ease-in-out;
-		transition: all 0.3s ease-in-out;
-		.bi-star-fill {
-			position: absolute;
-			opacity: 0;
+		label {
+			color: $color-green;
+			font-size: 18px;
+			padding: 0;
+			cursor: pointer;
 			-webkit-transition: all 0.3s ease-in-out;
 			transition: all 0.3s ease-in-out;
-			&.active {
-				opacity: 1;
+			.bi-star-fill {
+				position: absolute;
+				opacity: 0;
+				-webkit-transition: all 0.3s ease-in-out;
+				transition: all 0.3s ease-in-out;
+				&.active {
+					opacity: 1;
+				}
 			}
 		}
-	}
 
-	label:hover,
-	label:hover ~ label,
-	input[type="radio"]:checked ~ label {
-		color: $color-green;
-		.bi-star-fill {
-			opacity: 1;
+		label:hover,
+		label:hover ~ label,
+		input[type="radio"]:checked ~ label {
+			color: $color-green;
+			.bi-star-fill {
+				opacity: 1;
+			}
 		}
 	}
 }
