--- a/assets/scss/register.scss
+++ b/assets/scss/register.scss
@@ -13,6 +13,19 @@ article {
                 margin: 40px 0;
                 background: $color-green-dark;
                 border-radius: 8px;
+
+                h1 {
+                    font-size: 30px;
+                    color: $color-white;
+                    margin-bottom: 11px;
+                }
+
+                p {
+                    font-size: 14px;
+                    line-height: 23px;
+                    color: $color-white;
+                    margin-bottom: 35px;
+                }
             }
         }
     }
