feat: register page

--- a/assets/scss/assets/_variables.scss
+++ b/assets/scss/assets/_variables.scss
@@ -1,7 +1,7 @@
-$font-Basier-bold: 'Basier Circle Bold';
+$font-Basier-bold: 'Basier Circle Bold', SF Thonburi Bold;
 $font-Basier-semiBold: 'Basier Circle SemiBold';
 $font-Basier-medium: 'Basier Circle Medium';
-$font-Basier-regular: 'Basier Circle Regular';
+$font-Basier-regular: 'Basier Circle Regular', SF Thonburi Regular;
 $font-Thonburi-bold: 'SF Thonburi Bold';
 $font-Thonburi-regular: 'SF Thonburi Regular';
 
