--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -14,6 +14,14 @@
 	}
 }
 
+.border,
+.border-end,
+.border-top,
+.border-bottom,
+.border-start {
+	border-color: $color-grey !important;
+}
+
 section {
 	--space: 5rem;
 
@@ -26,6 +34,15 @@ section {
 
 	h4 {
 		font-size: 18px;
+	}
+
+	a {
+		color: $color-green;
+		text-decoration: underline;
+		&:hover {
+			color: $color-green;
+			text-decoration: none;
+		}
 	}
 
 	select {
@@ -457,13 +474,6 @@ section {
 	}
 	.shop-location {
 		padding-top: var(--space);
-		.border,
-		.border-end,
-		.border-top,
-		.border-bottom,
-		.border-start {
-			border-color: $color-grey !important;
-		}
 		.btn-default {
 			border-radius: 0.25rem !important;
 			border: 1px solid $color-grey;
@@ -537,7 +547,7 @@ section {
 					margin-right: 5px;
 				}
 			}
-			&-footer{
+			&-footer {
 				font-size: 90%;
 			}
 
@@ -548,7 +558,61 @@ section {
 			}
 		}
 
-		// padding-bottom: var(--space);
+		.google-map{
+			background: url("../images/home/mockup_map.jpg");
+			width: 100%;
+			height: 100%;
+			background-size: cover;
+		}
+	}
+	.shop-results {
+		.border {
+			padding: 0.5rem 1rem;
+			border-radius: 60px;
+			font-size: 80%;
+			margin-bottom: 2rem;
+		}
+		.card {
+			&-img-top {
+				height: 200px;
+				img {
+					object-position: center;
+					object-fit: cover;
+					height: 100%;
+					width: 100%;
+				}
+			}
+		}
+		.btn-outline {
+			border-color: $color-green;
+			background: transparent;
+			color: $color-green;
+			text-transform: capitalize;
+			border-radius: 60px;
+			padding: 10px 30px;
+			min-width: 130px;
+			text-transform: uppercase;
+			border-width: 1px;
+			&:hover {
+				background-color: $color-green;
+				color: $color-white !important;
+			}
+		}
+		.pagination {
+			padding-top: var(--space);
+			padding-bottom: var(--space);
+		}
+	}
+	&.section-welcome {
+		padding-top: var(--space);
+		padding-bottom: var(--space);
+		.card{
+			&-title{
+				color: $color-black;
+				font-family: $font-Basier-medium;
+				margin-bottom: 1rem;
+			}
+		}
 	}
 }
 
